--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>William's Coding Blog</title>
+	</head>
+	<body>
+		<h1>William's Coding Blog</h1>
+		<p>Welcome to William's Coding Blog</p>
+	</body>
+</html>
